pascal-compiler/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID ; lista_definicoes bloco .
Rule 2     lista_definicoes -> lista_definicoes definicao
Rule 3     lista_definicoes -> empty
Rule 4     definicao -> declaracoes_var
Rule 5     definicao -> subprograma
Rule 6     declaracoes_var -> VAR lista_declaracoes_tipo
Rule 7     lista_declaracoes_tipo -> lista_declaracoes_tipo declaracao_tipo ;
Rule 8     lista_declaracoes_tipo -> declaracao_tipo ;
Rule 9     declaracao_tipo -> lista_ids : tipo
Rule 10    lista_ids -> lista_ids , ID
Rule 11    lista_ids -> ID
Rule 12    tipo -> INTEGER
Rule 13    tipo -> BOOLEAN
Rule 14    tipo -> STRING
Rule 15    tipo -> ARRAY [ INT_LITERAL OP_DOTDOT INT_LITERAL ] OF tipo
Rule 16    config_decl_func -> FUNCTION ID
Rule 17    config_decl_proc -> PROCEDURE ID
Rule 18    cabecalho_func -> config_decl_func ( parametros_opt ) : tipo ;
Rule 19    cabecalho_proc -> config_decl_proc ( parametros_opt ) ;
Rule 20    subprograma -> cabecalho_func lista_definicoes bloco ;
Rule 21    subprograma -> cabecalho_proc lista_definicoes bloco ;
Rule 22    parametros_opt -> lista_parametros
Rule 23    parametros_opt -> empty
Rule 24    lista_parametros -> lista_parametros ; declaracao_tipo
Rule 25    lista_parametros -> declaracao_tipo
Rule 26    bloco -> BEGIN lista_comandos END
Rule 27    lista_comandos -> lista_comandos ; comando
Rule 28    lista_comandos -> comando
Rule 29    comando -> atribuicao
Rule 30    comando -> leitura
Rule 31    comando -> escrita
Rule 32    comando -> condicional
Rule 33    comando -> ciclo_for
Rule 34    comando -> ciclo_while
Rule 35    comando -> bloco
Rule 36    comando -> chamada_subprograma
Rule 37    comando -> empty
Rule 38    atribuicao -> ID OP_ASSIGN expressao
Rule 39    atribuicao -> ID [ expressao ] OP_ASSIGN expressao
Rule 40    leitura -> READLN ( lista_expressoes_opt )
Rule 41    escrita -> WRITELN ( lista_expressoes_opt )
Rule 42    condicional -> IF expressao THEN comando
Rule 43    condicional -> IF expressao THEN comando ELSE comando
Rule 44    ciclo_for -> FOR ID OP_ASSIGN expressao TO expressao DO comando
Rule 45    ciclo_for -> FOR ID OP_ASSIGN expressao DOWNTO expressao DO comando
Rule 46    ciclo_while -> WHILE expressao DO comando
Rule 47    chamada_subprograma -> ID ( lista_expressoes_opt )
Rule 48    expressao -> expressao + expressao
Rule 49    expressao -> expressao - expressao
Rule 50    expressao -> expressao * expressao
Rule 51    expressao -> expressao DIV expressao
Rule 52    expressao -> expressao MOD expressao
Rule 53    expressao -> expressao < expressao
Rule 54    expressao -> expressao > expressao
Rule 55    expressao -> expressao OP_LE expressao
Rule 56    expressao -> expressao OP_GE expressao
Rule 57    expressao -> expressao OP_NE expressao
Rule 58    expressao -> expressao = expressao
Rule 59    expressao -> expressao AND expressao
Rule 60    expressao -> ( expressao )
Rule 61    expressao -> ID
Rule 62    expressao -> INT_LITERAL
Rule 63    expressao -> STR_LITERAL
Rule 64    expressao -> BOOL_LITERAL
Rule 65    expressao -> ID [ expressao ]
Rule 66    expressao -> ID ( lista_expressoes_opt )
Rule 67    lista_expressoes_opt -> lista_expressoes
Rule 68    lista_expressoes_opt -> empty
Rule 69    lista_expressoes -> lista_expressoes , expressao
Rule 70    lista_expressoes -> expressao
Rule 71    empty -> <empty>

Terminals, with rules where they appear

(                    : 18 19 40 41 47 60 66
)                    : 18 19 40 41 47 60 66
*                    : 50
+                    : 48
,                    : 10 69
-                    : 49
.                    : 1
:                    : 9 18
;                    : 1 7 8 18 19 20 21 24 27
<                    : 53
=                    : 58
>                    : 54
AND                  : 59
ARRAY                : 15
BEGIN                : 26
BOOLEAN              : 13
BOOL_LITERAL         : 64
DIV                  : 51
DO                   : 44 45 46
DOWNTO               : 45
ELSE                 : 43
END                  : 26
FOR                  : 44 45
FUNCTION             : 16
ID                   : 1 10 11 16 17 38 39 44 45 47 61 65 66
IF                   : 42 43
INTEGER              : 12
INT_LITERAL          : 15 15 62
MOD                  : 52
OF                   : 15
OP_ASSIGN            : 38 39 44 45
OP_DOTDOT            : 15
OP_GE                : 56
OP_LE                : 55
OP_NE                : 57
PROCEDURE            : 17
PROGRAM              : 1
READLN               : 40
STRING               : 14
STR_LITERAL          : 63
THEN                 : 42 43
TO                   : 44
VAR                  : 6
WHILE                : 46
WRITELN              : 41
[                    : 15 39 65
]                    : 15 39 65
error                : 

Nonterminals, with rules where they appear

atribuicao           : 29
bloco                : 1 20 21 35
cabecalho_func       : 20
cabecalho_proc       : 21
chamada_subprograma  : 36
ciclo_for            : 33
ciclo_while          : 34
comando              : 27 28 42 43 43 44 45 46
condicional          : 32
config_decl_func     : 18
config_decl_proc     : 19
declaracao_tipo      : 7 8 24 25
declaracoes_var      : 4
definicao            : 2
empty                : 3 23 37 68
escrita              : 31
expressao            : 38 39 39 42 43 44 44 45 45 46 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 65 69 70
leitura              : 30
lista_comandos       : 26 27
lista_declaracoes_tipo : 6 7
lista_definicoes     : 1 2 20 21
lista_expressoes     : 67 69
lista_expressoes_opt : 40 41 47 66
lista_ids            : 9 10
lista_parametros     : 22 24
parametros_opt       : 18 19
programa             : 0
subprograma          : 5
tipo                 : 9 15 18

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID ; lista_definicoes bloco .

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID ; lista_definicoes bloco .

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . ; lista_definicoes bloco .

    ;               shift and go to state 4


state 4

    (1) programa -> PROGRAM ID ; . lista_definicoes bloco .
    (2) lista_definicoes -> . lista_definicoes definicao
    (3) lista_definicoes -> . empty
    (71) empty -> .

    BEGIN           reduce using rule 71 (empty -> .)
    VAR             reduce using rule 71 (empty -> .)
    FUNCTION        reduce using rule 71 (empty -> .)
    PROCEDURE       reduce using rule 71 (empty -> .)

    lista_definicoes               shift and go to state 5
    empty                          shift and go to state 6

state 5

    (1) programa -> PROGRAM ID ; lista_definicoes . bloco .
    (2) lista_definicoes -> lista_definicoes . definicao
    (26) bloco -> . BEGIN lista_comandos END
    (4) definicao -> . declaracoes_var
    (5) definicao -> . subprograma
    (6) declaracoes_var -> . VAR lista_declaracoes_tipo
    (20) subprograma -> . cabecalho_func lista_definicoes bloco ;
    (21) subprograma -> . cabecalho_proc lista_definicoes bloco ;
    (18) cabecalho_func -> . config_decl_func ( parametros_opt ) : tipo ;
    (19) cabecalho_proc -> . config_decl_proc ( parametros_opt ) ;
    (16) config_decl_func -> . FUNCTION ID
    (17) config_decl_proc -> . PROCEDURE ID

    BEGIN           shift and go to state 9
    VAR             shift and go to state 12
    FUNCTION        shift and go to state 17
    PROCEDURE       shift and go to state 18

    bloco                          shift and go to state 7
    definicao                      shift and go to state 8
    declaracoes_var                shift and go to state 10
    subprograma                    shift and go to state 11
    cabecalho_func                 shift and go to state 13
    cabecalho_proc                 shift and go to state 14
    config_decl_func               shift and go to state 15
    config_decl_proc               shift and go to state 16

state 6

    (3) lista_definicoes -> empty .

    BEGIN           reduce using rule 3 (lista_definicoes -> empty .)
    VAR             reduce using rule 3 (lista_definicoes -> empty .)
    FUNCTION        reduce using rule 3 (lista_definicoes -> empty .)
    PROCEDURE       reduce using rule 3 (lista_definicoes -> empty .)


state 7

    (1) programa -> PROGRAM ID ; lista_definicoes bloco . .

    .               shift and go to state 19


state 8

    (2) lista_definicoes -> lista_definicoes definicao .

    BEGIN           reduce using rule 2 (lista_definicoes -> lista_definicoes definicao .)
    VAR             reduce using rule 2 (lista_definicoes -> lista_definicoes definicao .)
    FUNCTION        reduce using rule 2 (lista_definicoes -> lista_definicoes definicao .)
    PROCEDURE       reduce using rule 2 (lista_definicoes -> lista_definicoes definicao .)


state 9

    (26) bloco -> BEGIN . lista_comandos END
    (27) lista_comandos -> . lista_comandos ; comando
    (28) lista_comandos -> . comando
    (29) comando -> . atribuicao
    (30) comando -> . leitura
    (31) comando -> . escrita
    (32) comando -> . condicional
    (33) comando -> . ciclo_for
    (34) comando -> . ciclo_while
    (35) comando -> . bloco
    (36) comando -> . chamada_subprograma
    (37) comando -> . empty
    (38) atribuicao -> . ID OP_ASSIGN expressao
    (39) atribuicao -> . ID [ expressao ] OP_ASSIGN expressao
    (40) leitura -> . READLN ( lista_expressoes_opt )
    (41) escrita -> . WRITELN ( lista_expressoes_opt )
    (42) condicional -> . IF expressao THEN comando
    (43) condicional -> . IF expressao THEN comando ELSE comando
    (44) ciclo_for -> . FOR ID OP_ASSIGN expressao TO expressao DO comando
    (45) ciclo_for -> . FOR ID OP_ASSIGN expressao DOWNTO expressao DO comando
    (46) ciclo_while -> . WHILE expressao DO comando
    (26) bloco -> . BEGIN lista_comandos END
    (47) chamada_subprograma -> . ID ( lista_expressoes_opt )
    (71) empty -> .

    ID              shift and go to state 31
    READLN          shift and go to state 32
    WRITELN         shift and go to state 33
    IF              shift and go to state 34
    FOR             shift and go to state 35
    WHILE           shift and go to state 36
    BEGIN           shift and go to state 9
    END             reduce using rule 71 (empty -> .)
    ;               reduce using rule 71 (empty -> .)

    lista_comandos                 shift and go to state 20
    comando                        shift and go to state 21
    atribuicao                     shift and go to state 22
    leitura                        shift and go to state 23
    escrita                        shift and go to state 24
    condicional                    shift and go to state 25
    ciclo_for                      shift and go to state 26
    ciclo_while                    shift and go to state 27
    bloco                          shift and go to state 28
    chamada_subprograma            shift and go to state 29
    empty                          shift and go to state 30

state 10

    (4) definicao -> declaracoes_var .

    BEGIN           reduce using rule 4 (definicao -> declaracoes_var .)
    VAR             reduce using rule 4 (definicao -> declaracoes_var .)
    FUNCTION        reduce using rule 4 (definicao -> declaracoes_var .)
    PROCEDURE       reduce using rule 4 (definicao -> declaracoes_var .)


state 11

    (5) definicao -> subprograma .

    BEGIN           reduce using rule 5 (definicao -> subprograma .)
    VAR             reduce using rule 5 (definicao -> subprograma .)
    FUNCTION        reduce using rule 5 (definicao -> subprograma .)
    PROCEDURE       reduce using rule 5 (definicao -> subprograma .)


state 12

    (6) declaracoes_var -> VAR . lista_declaracoes_tipo
    (7) lista_declaracoes_tipo -> . lista_declaracoes_tipo declaracao_tipo ;
    (8) lista_declaracoes_tipo -> . declaracao_tipo ;
    (9) declaracao_tipo -> . lista_ids : tipo
    (10) lista_ids -> . lista_ids , ID
    (11) lista_ids -> . ID

    ID              shift and go to state 40

    lista_declaracoes_tipo         shift and go to state 37
    declaracao_tipo                shift and go to state 38
    lista_ids                      shift and go to state 39

state 13

    (20) subprograma -> cabecalho_func . lista_definicoes bloco ;
    (2) lista_definicoes -> . lista_definicoes definicao
    (3) lista_definicoes -> . empty
    (71) empty -> .

    BEGIN           reduce using rule 71 (empty -> .)
    VAR             reduce using rule 71 (empty -> .)
    FUNCTION        reduce using rule 71 (empty -> .)
    PROCEDURE       reduce using rule 71 (empty -> .)

    lista_definicoes               shift and go to state 41
    empty                          shift and go to state 6

state 14

    (21) subprograma -> cabecalho_proc . lista_definicoes bloco ;
    (2) lista_definicoes -> . lista_definicoes definicao
    (3) lista_definicoes -> . empty
    (71) empty -> .

    BEGIN           reduce using rule 71 (empty -> .)
    VAR             reduce using rule 71 (empty -> .)
    FUNCTION        reduce using rule 71 (empty -> .)
    PROCEDURE       reduce using rule 71 (empty -> .)

    lista_definicoes               shift and go to state 42
    empty                          shift and go to state 6

state 15

    (18) cabecalho_func -> config_decl_func . ( parametros_opt ) : tipo ;

    (               shift and go to state 43


state 16

    (19) cabecalho_proc -> config_decl_proc . ( parametros_opt ) ;

    (               shift and go to state 44


state 17

    (16) config_decl_func -> FUNCTION . ID

    ID              shift and go to state 45


state 18

    (17) config_decl_proc -> PROCEDURE . ID

    ID              shift and go to state 46


state 19

    (1) programa -> PROGRAM ID ; lista_definicoes bloco . .

    $end            reduce using rule 1 (programa -> PROGRAM ID ; lista_definicoes bloco . .)


state 20

    (26) bloco -> BEGIN lista_comandos . END
    (27) lista_comandos -> lista_comandos . ; comando

    END             shift and go to state 47
    ;               shift and go to state 48


state 21

    (28) lista_comandos -> comando .

    END             reduce using rule 28 (lista_comandos -> comando .)
    ;               reduce using rule 28 (lista_comandos -> comando .)


state 22

    (29) comando -> atribuicao .

    END             reduce using rule 29 (comando -> atribuicao .)
    ;               reduce using rule 29 (comando -> atribuicao .)
    ELSE            reduce using rule 29 (comando -> atribuicao .)


state 23

    (30) comando -> leitura .

    END             reduce using rule 30 (comando -> leitura .)
    ;               reduce using rule 30 (comando -> leitura .)
    ELSE            reduce using rule 30 (comando -> leitura .)


state 24

    (31) comando -> escrita .

    END             reduce using rule 31 (comando -> escrita .)
    ;               reduce using rule 31 (comando -> escrita .)
    ELSE            reduce using rule 31 (comando -> escrita .)


state 25

    (32) comando -> condicional .

    END             reduce using rule 32 (comando -> condicional .)
    ;               reduce using rule 32 (comando -> condicional .)
    ELSE            reduce using rule 32 (comando -> condicional .)


state 26

    (33) comando -> ciclo_for .

    END             reduce using rule 33 (comando -> ciclo_for .)
    ;               reduce using rule 33 (comando -> ciclo_for .)
    ELSE            reduce using rule 33 (comando -> ciclo_for .)


state 27

    (34) comando -> ciclo_while .

    END             reduce using rule 34 (comando -> ciclo_while .)
    ;               reduce using rule 34 (comando -> ciclo_while .)
    ELSE            reduce using rule 34 (comando -> ciclo_while .)


state 28

    (35) comando -> bloco .

    END             reduce using rule 35 (comando -> bloco .)
    ;               reduce using rule 35 (comando -> bloco .)
    ELSE            reduce using rule 35 (comando -> bloco .)


state 29

    (36) comando -> chamada_subprograma .

    END             reduce using rule 36 (comando -> chamada_subprograma .)
    ;               reduce using rule 36 (comando -> chamada_subprograma .)
    ELSE            reduce using rule 36 (comando -> chamada_subprograma .)


state 30

    (37) comando -> empty .

    END             reduce using rule 37 (comando -> empty .)
    ;               reduce using rule 37 (comando -> empty .)
    ELSE            reduce using rule 37 (comando -> empty .)


state 31

    (38) atribuicao -> ID . OP_ASSIGN expressao
    (39) atribuicao -> ID . [ expressao ] OP_ASSIGN expressao
    (47) chamada_subprograma -> ID . ( lista_expressoes_opt )

    OP_ASSIGN       shift and go to state 49
    [               shift and go to state 50
    (               shift and go to state 51


state 32

    (40) leitura -> READLN . ( lista_expressoes_opt )

    (               shift and go to state 52


state 33

    (41) escrita -> WRITELN . ( lista_expressoes_opt )

    (               shift and go to state 53


state 34

    (42) condicional -> IF . expressao THEN comando
    (43) condicional -> IF . expressao THEN comando ELSE comando
    (48) expressao -> . expressao + expressao
    (49) expressao -> . expressao - expressao
    (50) expressao -> . expressao * expressao
    (51) expressao -> . expressao DIV expressao
    (52) expressao -> . expressao MOD expressao
    (53) expressao -> . expressao < expressao
    (54) expressao -> . expressao > expressao
    (55) expressao -> . expressao OP_LE expressao
    (56) expressao -> . expressao OP_GE expressao
    (57) expressao -> . expressao OP_NE expressao
    (58) expressao -> . expressao = expressao
    (59) expressao -> . expressao AND expressao
    (60) expressao -> . ( expressao )
    (61) expressao -> . ID
    (62) expressao -> . INT_LITERAL
    (63) expressao -> . STR_LITERAL
    (64) expressao -> . BOOL_LITERAL
    (65) expressao -> . ID [ expressao ]
    (66) expressao -> . ID ( lista_expressoes_opt )

    (               shift and go to state 55
    ID              shift and go to state 56
    INT_LITERAL     shift and go to state 57
    STR_LITERAL     shift and go to state 58
    BOOL_LITERAL    shift and go to state 59

    expressao                      shift and go to state 54

state 35

    (44) ciclo_for -> FOR . ID OP_ASSIGN expressao TO expressao DO comando
    (45) ciclo_for -> FOR . ID OP_ASSIGN expressao DOWNTO expressao DO comando

    ID              shift and go to state 60


state 36

    (46) ciclo_while -> WHILE . expressao DO comando
    (48) expressao -> . expressao + expressao
    (49) expressao -> . expressao - expressao
    (50) expressao -> . expressao * expressao
    (51) expressao -> . expressao DIV expressao
    (52) expressao -> . expressao MOD expressao
    (53) expressao -> . expressao < expressao
    (54) expressao -> . expressao > expressao
    (55) expressao -> . expressao OP_LE expressao
    (56) expressao -> . expressao OP_GE expressao
    (57) expressao -> . expressao OP_NE expressao
    (58) expressao -> . expressao = expressao
    (59) expressao -> . expressao AND expressao
    (60) expressao -> . ( expressao )
    (61) expressao -> . ID
    (62) expressao -> . INT_LITERAL
    (63) expressao -> . STR_LITERAL
    (64) expressao -> . BOOL_LITERAL
    (65) expressao -> . ID [ expressao ]
    (66) expressao -> . ID ( lista_expressoes_opt )

    (               shift and go to state 55
    ID              shift and go to state 56
    INT_LITERAL     shift and go to state 57
    STR_LITERAL     shift and go to state 58
    BOOL_LITERAL    shift and go to state 59

    expressao                      shift and go to state 61

state 37

    (6) declaracoes_var -> VAR lista_declaracoes_tipo .
    (7) lista_declaracoes_tipo -> lista_declaracoes_tipo . declaracao_tipo ;
    (9) declaracao_tipo -> . lista_ids : tipo
    (10) lista_ids -> . lista_ids , ID
    (11) lista_ids -> . ID

    BEGIN           reduce using rule 6 (declaracoes_var -> VAR lista_declaracoes_tipo .)
    VAR             reduce using rule 6 (declaracoes_var -> VAR lista_declaracoes_tipo .)
    FUNCTION        reduce using rule 6 (declaracoes_var -> VAR lista_declaracoes_tipo .)
    PROCEDURE       reduce using rule 6 (declaracoes_var -> VAR lista_declaracoes_tipo .)
    ID              shift and go to state 40

    declaracao_tipo                shift and go to state 62
    lista_ids                      shift and go to state 39

state 38

    (8) lista_declaracoes_tipo -> declaracao_tipo . ;

    ;               shift and go to state 63


state 39

    (9) declaracao_tipo -> lista_ids . : tipo
    (10) lista_ids -> lista_ids . , ID

    :               shift and go to state 64
    ,               shift and go to state 65


state 40

    (11) lista_ids -> ID .

    :               reduce using rule 11 (lista_ids -> ID .)
    ,               reduce using rule 11 (lista_ids -> ID .)


state 41

    (20) subprograma -> cabecalho_func lista_definicoes . bloco ;
    (2) lista_definicoes -> lista_definicoes . definicao
    (26) bloco -> . BEGIN lista_comandos END
    (4) definicao -> . declaracoes_var
    (5) definicao -> . subprograma
    (6) declaracoes_var -> . VAR lista_declaracoes_tipo
    (20) subprograma -> . cabecalho_func lista_definicoes bloco ;
    (21) subprograma -> . cabecalho_proc lista_definicoes bloco ;
    (18) cabecalho_func -> . config_decl_func ( parametros_opt ) : tipo ;
    (19) cabecalho_proc -> . config_decl_proc ( parametros_opt ) ;
    (16) config_decl_func -> . FUNCTION ID
    (17) config_decl_proc -> . PROCEDURE ID

    BEGIN           shift and go to state 9
    VAR             shift and go to state 12
    FUNCTION        shift and go to state 17
    PROCEDURE       shift and go to state 18

    cabecalho_func                 shift and go to state 13
    bloco                          shift and go to state 66
    definicao                      shift and go to state 8
    declaracoes_var                shift and go to state 10
    subprograma                    shift and go to state 11
    cabecalho_proc                 shift and go to state 14
    config_decl_func               shift and go to state 15
    config_decl_proc               shift and go to state 16

state 42

    (21) subprograma -> cabecalho_proc lista_definicoes . bloco ;
    (2) lista_definicoes -> lista_definicoes . definicao
    (26) bloco -> . BEGIN lista_comandos END
    (4) definicao -> . declaracoes_var
    (5) definicao -> . subprograma
    (6) declaracoes_var -> . VAR lista_declaracoes_tipo
    (20) subprograma -> . cabecalho_func lista_definicoes bloco ;
    (21) subprograma -> . cabecalho_proc lista_definicoes bloco ;
    (18) cabecalho_func -> . config_decl_func ( parametros_opt ) : tipo ;
    (19) cabecalho_proc -> . config_decl_proc ( parametros_opt ) ;
    (16) config_decl_func -> . FUNCTION ID
    (17) config_decl_proc -> . PROCEDURE ID

    BEGIN           shift and go to state 9
    VAR             shift and go to state 12
    FUNCTION        shift and go to state 17
    PROCEDURE       shift and go to state 18

    cabecalho_proc                 shift and go to state 14
    bloco                          shift and go to state 67
